components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@CONTROL5.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/CONTROL5.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "THEOPHYLLINE   POPULATION DATA",
        number_data_records: 144,
        number_subjects: 12,
        number_obs: 132,
        estimation_time: [
            0.02,
        ],
        covariance_time: [],
        postprocess_time: 0.0,
        estimation_methods: [
            "First Order",
        ],
        function_evaluations: 149,
        significant_digits: 4.7,
        only_sim: false,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: None,
        eigenvalue_issues: None,
        parameter_near_boundary: Some(
            false,
        ),
        hessian_reset: Some(
            false,
        ),
        program_aborted: Some(
            false,
        ),
        minimization_terminated: Some(
            false,
        ),
    },
}
