components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@acop.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/acop.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "PK model 1 cmt base",
        number_data_records: 799,
        number_subjects: 40,
        number_obs: 760,
        estimation_time: [
            0.86,
        ],
        covariance_time: [
            0.26,
        ],
        postprocess_time: 0.0,
        estimation_methods: [
            "First Order Conditional Estimation with Interaction",
        ],
        function_evaluations: 366,
        significant_digits: 3.2,
        only_sim: false,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: Some(
            false,
        ),
        eigenvalue_issues: Some(
            false,
        ),
        parameter_near_boundary: Some(
            false,
        ),
        hessian_reset: Some(
            false,
        ),
        minimization_terminated: Some(
            false,
        ),
        program_terminated_by_obj: Some(
            false,
        ),
    },
}
