components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@bql.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/bql.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "RUN# 2 - 2cmpt model - no BQLs ",
        number_data_records: 2895,
        number_subjects: 193,
        number_obs: 2702,
        estimation_time: [
            2.36,
        ],
        covariance_time: [
            2.54,
        ],
        postprocess_time: 0.02,
        estimation_methods: [
            "First Order Conditional Estimation with Interaction",
        ],
        function_evaluations: 208,
        significant_digits: 3.8,
        only_sim: false,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: Some(
            false,
        ),
        eigenvalue_issues: Some(
            false,
        ),
        parameter_near_boundary: Some(
            false,
        ),
        hessian_reset: Some(
            false,
        ),
        program_aborted: Some(
            false,
        ),
        minimization_terminated: Some(
            false,
        ),
    },
}
