components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@obj-term.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/obj-term.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "projH 1001 SCM base -- ADVAN5 TRANS1 transit-abs 2-cmt, covariate candidates released created from pharos see projH-1001_vccat4_metadata.json for details.",
        number_data_records: 15231,
        number_subjects: 268,
        number_obs: 7769,
        estimation_time: [
            147.08,
        ],
        covariance_time: [],
        postprocess_time: 0.0,
        estimation_methods: [
            "First Order Conditional Estimation with Interaction",
        ],
        function_evaluations: 0,
        significant_digits: 0.0,
        only_sim: false,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: None,
        eigenvalue_issues: None,
        parameter_near_boundary: Some(
            false,
        ),
        hessian_reset: Some(
            false,
        ),
        minimization_terminated: Some(
            true,
        ),
        program_terminated_by_obj: Some(
            true,
        ),
    },
}
