components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@onlysim.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/onlysim.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "RUN# ecomp1_pkpd EFFECT COMP POPULATION PK-PD MODEL 1",
        number_data_records: 100,
        number_subjects: 2,
        number_obs: 98,
        estimation_time: [],
        covariance_time: [],
        postprocess_time: 0.0,
        estimation_methods: [],
        function_evaluations: 0,
        significant_digits: 0.0,
        only_sim: true,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: None,
        eigenvalue_issues: None,
        parameter_near_boundary: None,
        hessian_reset: None,
        program_aborted: None,
        minimization_terminated: None,
    },
}
