components/nonmem/src/output_files/snapshots/nonmem__output_files__lst__tests__can_parse_lst@saemimp.lst.snap
---
source: components/nonmem/src/output_files/lst.rs
expression: "LstSummary::from_run(path).unwrap()"
input_file: components/nonmem/test_data/lst/saemimp.lst
---
LstSummary {
    run_details: RunDetails {
        problem: "RUN# example2 (from sampc)",
        number_data_records: 2400,
        number_subjects: 400,
        number_obs: 2000,
        estimation_time: [
            0.55,
            25.71,
        ],
        covariance_time: [
            0.02,
            40.04,
        ],
        postprocess_time: 0.0,
        estimation_methods: [
            "Stochastic Approximation Expectation-Maximization",
            "Objective Function Evaluation by Importance Sampling",
        ],
        function_evaluations: 0,
        significant_digits: 0.0,
        only_sim: false,
    },
    run_heuristics: RunHeuristics {
        covariance_step_aborted: Some(
            false,
        ),
        eigenvalue_issues: Some(
            true,
        ),
        parameter_near_boundary: Some(
            false,
        ),
        hessian_reset: Some(
            false,
        ),
        program_aborted: Some(
            false,
        ),
        minimization_terminated: Some(
            false,
        ),
    },
}
